[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"
description = "Manage groups of background tasks"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/taskmanager"

[dependencies]
futures = "0.3.26"
tokio = { version = "1.25.0", features = [
    "signal",
    "macros",
    "time",
    "sync",
    "rt",
] }
waitgroup = "0.1.2"
